<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".itemEquipe"
    tools:layout_editor_absoluteY="25dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="71dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="1dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="TODO"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="8dp" />

        <TextView
            android:id="@+id/equipe1"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical"
            android:text="@string/equipe_1"
            app:layout_constraintEnd_toStartOf="@+id/vs"
            app:layout_constraintStart_toEndOf="@+id/imageView1"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="36dp" />

        <TextView
            android:id="@+id/vs"
            android:layout_width="25dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_vertical"
            android:text="@string/vs"
            app:layout_constraintEnd_toStartOf="@+id/equipe2"
            app:layout_constraintStart_toEndOf="@+id/equipe1"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="36dp" />

        <TextView
            android:id="@+id/equipe2"
            android:layout_width="75dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical"
            android:text="@string/equipe_2"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/vs"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="36dp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/todo"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintEnd_toStartOf="@+id/equipe1"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="8dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>