<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorControlHighlight"
    tools:context=".CellPrototypeAccueil"
    tools:layout_editor_absoluteY="25dp">

    <View
        android:id="@+id/view"
        android:layout_width="380dp"
        android:layout_height="400dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:background="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="4dp" />

    <LinearLayout
        android:layout_width="379dp"
        android:layout_height="400dp"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageUserAccueil"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/fond2"
                tools:layout_editor_absoluteX="28dp"
                tools:layout_editor_absoluteY="16dp" />

            <LinearLayout
                android:layout_width="312dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/NomUserAccueil"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:text="Nom Prenom"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText,MissingConstraints,RtlSymmetry"
                    tools:layout_editor_absoluteX="94dp"
                    tools:layout_editor_absoluteY="12dp" />

                <TextView
                    android:id="@+id/DatePubAccueil"
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:paddingStart="10dp"
                    android:text="@string/date"
                    android:textSize="12sp"
                    tools:ignore="MissingConstraints,RtlSymmetry"
                    tools:layout_editor_absoluteX="94dp"
                    tools:layout_editor_absoluteY="42dp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:background="@color/colorWhiteTransparent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="68dp" />

        <TextView
            android:id="@+id/nomPubAccueil"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:text="TextView"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="79dp" />

        <ImageView
            android:id="@+id/imageAccueil"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@drawable/fond7"
            tools:layout_editor_absoluteX="11dp"
            tools:layout_editor_absoluteY="117dp" />

        <TextView
            android:id="@+id/descriptionUser"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:lines="2"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:text="@string/description"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="305dp" />

        <View
            android:id="@+id/view6"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorWhiteTransparent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="335dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:layout_marginStart="50dp"
                android:layout_weight="1"
                android:alpha="0.5"
                android:paddingStart="10dp"
                android:src="@drawable/like22" />

            <TextView
                android:id="@+id/likeTxt"
                android:layout_width="2dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="000" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="0dp"
                android:layout_height="18dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:alpha="0.7"
                android:paddingStart="0dp"
                android:src="@drawable/comment" />

            <TextView
                android:id="@+id/commentaireTxtAccueil"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/commentaire_s" />
        </LinearLayout>

        <View
            android:id="@+id/view3"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@color/colorWhiteTransparent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="335dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/btnLike"
                android:layout_width="181dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/likeImageBtn"
                    android:layout_width="25dp"
                    android:layout_height="30dp"
                    android:src="@drawable/untitled"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="49dp"
                    tools:layout_editor_absoluteY="350dp" />

                <TextView
                    android:id="@+id/likeBtn"
                    android:layout_width="68dp"
                    android:layout_height="wrap_content"
                    android:text="@string/j_aime"
                    android:textColor="@color/com_facebook_blue"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="80dp"
                    tools:layout_editor_absoluteY="351dp" />

            </LinearLayout>

            <View
                android:id="@+id/view4"
                android:layout_width="1dp"
                android:layout_height="40dp"
                android:background="@color/colorWhiteTransparent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="192dp"
                tools:layout_editor_absoluteY="341dp" />

            <LinearLayout
                android:id="@+id/btnPartege"
                android:layout_width="156dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center"
                android:orientation="horizontal">

                <com.facebook.share.widget.ShareButton
                    android:id="@+id/fb_share_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/facebook_share_button"
                    android:textAllCaps="true"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/imageView17"
                    android:layout_width="25dp"
                    android:layout_height="28dp"
                    android:src="@drawable/share"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="205dp"
                    tools:layout_editor_absoluteY="348dp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="64dp"
                    android:layout_height="22dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/partager"
                    android:textColor="@color/com_facebook_blue"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="233dp"
                    tools:layout_editor_absoluteY="350dp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>